2003-08-27  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" (Hindi) to ALL_LINGUAS.

2003-08-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* TODO: Updated for 2.5.

	* configure.in: Switched version up to 2.5.0. There is now a
	gnome-2-4 branch in CVS for the old stuff.

	* NEWS: Updated for 2.3.7.

	* configure.in: Bumped version number for 2.3.7.

2003-08-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* README: Complete rewrite for 2.4.

2003-08-06  Metin Amiroff <metin@karegen.com>

	* configure.in: Added "az" (Azerbaijani) to ALL_LINGUAS

2003-08-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in: Remove warnings for C++ programs and bumped the
	version number up for 2.3.6.

2003-07-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in: Make sure we have a prefix for
	GNOME_ICONDIR. Thanks Steve.

2003-07-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* README: Used the new names.
	* configure.in: Bumped up to 2.3.5.
	* NEWS: Updated for 2.3.5.

2003-07-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in: Bumped up the version number to 2.3.4.

2003-06-30  Mohammad DAMT  <mdamt@bisnisweb.com>

	* po/id.po: Added Indonesian translation
	* configure.in: Added "id" to ALL_LINGUAS

2003-06-27  William Jon McCann  <mccann@jhu.edu>

	* gnome-games.spec.in: Merged vendor and CVS versions.

2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* */Makefile.am: Use user:group for chown rather than user.group.

2003-06-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* TODO: Gnome-stones

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* TODO: Updated with results of this round of compiler warning
	fixes.

2003-06-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* configure.in: Enable warnings for all the games (whether or not
	they explicitly include WARN_CFLAGS). It's a bit of a hack, but
	this should be done down here at the base level rather than with