@@ -47,7 +47,7 @@ AC_CHECK_FUNCS(ngettext)
 GNOME_COMPILE_WARNINGS(yes) 
 GNOME_CXX_WARNINGS(yes)
 
-CFLAGS="$CFLAGS $GNOME_GAMES_CFLAGS $WARN_CFLAGS"
+CFLAGS="-ansi $CFLAGS $GNOME_GAMES_CFLAGS $WARN_CFLAGS"
 
 AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
