@@ -1,3 +1,8 @@
+2003-08-27  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* configure.in: Added -ansi to CFLAGS so I catch C99 code before I
+	commit it to CVS.
+
 2003-08-27  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* configure.in: Added "hi" (Hindi) to ALL_LINGUAS.
